ui에 중량(돈) 기준 생성 100만원 이상 제품 카드가 1.15로 설정

--- a/src/main/resources/templates/form/goods/goodCalculate.html
+++ b/src/main/resources/templates/form/goods/goodCalculate.html
@@ -79,12 +79,13 @@
                 <div id="alertPosition"></div>
 
                 <div class="mt-5 mb-2 d-none justify-content-center" id="priceTable">
-                    <div class="col-8">
+                    <div class="col-9">
                         <table class="table">
                             <thead>
                             <tr>
                                 <th scope="col"></th>
-                                <th class="text-center" scope="col">중량</th>
+                                <th class="text-center" scope="col">중량(g)</th>
+                                <th class="text-center" scope="col">중량(돈)</th>
                                 <th class="text-center" scope="col">카드가</th>
                                 <th class="text-center" scope="col">최대할인</th>
 
@@ -94,18 +95,21 @@
                             <tr id="14kTr">
                                 <th class="text-center" scope="row">14k</th>
                                 <td class="text-center" id="14kMount"></td>
+                                <td class="text-center" id="14kMount2"></td>
                                 <td class="text-center" id="14kStorePrice"></td>
                                 <td class="text-center" id="14kPrice"></td>
                             </tr>
                             <tr id="18kTr">
                                 <th class="text-center" scope="row">18k</th>
                                 <td class="text-center" id="18kMount"></td>
+                                <td class="text-center" id="18kMount2"></td>
                                 <td class="text-center" id="18kStorePrice"></td>
                                 <td class="text-center" id="18kPrice"></td>
                             </tr>
                             <tr id="24kTr">
                                 <th class="text-center" scope="row">24k</th>
                                 <td class="text-center" id="24kMount"></td>
+                                <td class="text-center" id="24kMount2"></td>
                                 <td class="text-center" id="24kStorePrice"></td>
                                 <td class="text-center" id="24kPrice"></td>
                             </tr>
