--- a/src/main/resources/templates/form/item/createItemForm.html
+++ b/src/main/resources/templates/form/item/createItemForm.html
@@ -122,7 +122,7 @@
                         <div class="col-sm-12 form-floating">
                             <textarea class="form-control" placeholder="메모." th:field="*{memo}"
                                       style="height: 100px"></textarea>
-                            <label th:for="memo">메모</label>
+<!--                            <label th:for="memo">메모</label>-->
                         </div>
                     </div>
 
